--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 main{
-  
 }
 /* Navbar */
 .navbar-menu{
@@ -25,4 +24,7 @@ main{
 .navbar-menu a{
   text-decoration: none;
   color: #121111;
+}
+.navbar-menu .active{
+  color: #05ff09;
 }
