--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 main{
 }
+.TopicHeading{
+ color:blue;
+text-align:center;
+}
 /* Navbar Start*/
 .navbar-menu{
   display: flex;
@@ -41,3 +45,43 @@ main{
   color:pink;
 }
 /* Hero End*/
+
+/* Cards Starts*/
+.cards{
+  display:flex;
+  flex-wrap:wrap;
+  margin-top:2rem;
+}
+.card {
+  background-color: #ffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 10px;
+  width:15rem;
+}
+
+.card h3 {
+  font-size: 1.5rem;
+  color: pink;
+  margin-bottom: 1rem;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.card p {
+  font-size: 1rem;
+  color: #121111;
+  margin:auto;
+  text-align: center;
+}
+.card img{
+  width: 90%;
+  height: 15rem;
+  border-radius: 10px;
+  margin:auto;
+}
+/* Cards End*/
